[gd_scene load_steps=11 format=2]

[ext_resource path="res://door.gd" type="Script" id=1]
[ext_resource path="res://sprits/door/doorClosed_mid.png" type="Texture" id=2]
[ext_resource path="res://sprits/door/doorOpen_mid.png" type="Texture" id=3]
[ext_resource path="res://sprits/backgrownd.png" type="Texture" id=4]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprits/sprits/ok.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "2",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 66.1934
height = 82.97

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 5 )

[node name="door" type="Area2D"]
editor/display_folded = true
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.46094, -14.411 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 984.222, 658.285 )
scale = Vector2( 0.613803, 0.655117 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 855.539
margin_top = 484.722
margin_right = 1016.54
margin_bottom = 563.722
custom_fonts/font = SubResource( 3 )
text = "scor :"

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 1084.39
margin_top = 500.147
margin_right = 1124.39
margin_bottom = 579.147
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 756.859
margin_top = 809.972
margin_right = 1225.86
margin_bottom = 932.972
texture_normal = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_door_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
